[project]
name = "multinerf"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yousiki", email = "you.siki@outlook.com" }
]
dependencies = [
    "dm_pix",
    "flax",
    "gin-config",
    "jax==0.4.9",
    "jaxlib @ https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.4.9+cuda11.cudnn86-cp311-cp311-manylinux2014_x86_64.whl",
    "mediapy",
    "numpy",
    "opencv-python",
    "pillow",
    "rawpy",
    "tensorboard",
    "tensorflow-cpu",
    "ml-dtypes==0.2.0",
    "scipy<=1.12.0",
    "orbax-checkpoint~=0.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multinerf"]

[[tool.rye.sources]]
name = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
